Minor edit to PPP

--- a/docs/team/yogtew.adoc
+++ b/docs/team/yogtew.adoc
@@ -1,4 +1,7 @@
 = Yogusvi Tewari - Project Portfolio
+:site-section: AboutUs
+:imagesDir: ../images
+:stylesDir: ../stylesheets
 
 == Project: ConTAct
 
