--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -164,6 +164,8 @@ Examples:
 * `cancel event/CS2103 Consultation date/24-9-2019 start/18:00 end/19:00` +
 Cancels the event named `CS2103-Tutorial-W13` on 24-9-2019 from 6:00pm to 7:00pm.
 // end::cancel[]
+
+// tag::email[]
 === Emailing students: `email`
 
 Allows the user to email a specified student. +
@@ -211,6 +213,65 @@ Returns any student having names `Betsy`, `Tim`, or `John`
 Returns students tagged with `t/students`
 * `find t/students t/colleagues` +
 Returns students tagged with `t/students` or `t/colleagues`
+//end::email[]
+
+// tag::mark[]
+=== Mark: `mark`
+A Mark represents a group of Students in the app. Some commands accept Marks as an alternative to INDEX as a parameter to quickly perform batch operations.
+
+==== Mark Creation
+Format: `mark find t/TAGNAME` or `mark find KEYWORD`
+
+This creates a Mark containing the Students returned by the find command with the supplied arguments.
+
+E.g. `mark find t/friends` will find all students in the Address Book tagged with "friends" and add them to a Mark.
+
+==== Named Marks
+Marks can be named by using the prefix `m/MARKNAME`. If not specified, the name of the created Mark will default to "m/default".
+
+E.g. `mark m/myMarkName find t/friends` will add the Students tagged with "friends" to a Mark called "myMarkName"
+
+Note: Mark names must be alphanumeric and do not contain spaces.
+
+==== Manipulating Marks
+Marks are able to be manipulated in the same way as sets, namely, they support the following operations: `union (join)`, `intersection (and)`, `complement (NYI)`
+
+Format: `mark [m/DEST_MARK] <operation> m/OPERANDMARK1 [m/OPERANDMARK2]`
+
+E.g. `mark m/students join m/tut1 m/tut2` m/students will contain the Students of m/tut1 and m/tut2 merged together
+
+E.g. `mark m/canRetake and m/absentFromTest m/validReason` -- m/canRetake will contain Students that are in both m/absentFromTest and m/validReason
+
+Note: The first operand is compulsory while the second operand is optional and will default to "m/default"
+
+==== Displaying Marks
+The Students in a Mark can be shown in the GUI with the following command:
+
+`mark [m/MARKTOBESHOWN] show`
+
+==== Interactions with `undo` and `redo`
+Due to the way `undo` and `redo` are implemented, Marks that are changed as a result of these commands will not behave as expected, the students that are changed will be removed from the Mark.
+
+==== Reference
+`mark [m/m1] ...`
+
+* `find <KEYWORD|t/TAG...>` -- finds persons matching KEYWORD in their name or matching specified tags and mark under _m1_
+* `join m/m2 m/m3` -- sets _m1_ to be the *union* of _m2_ and _m3_
+* `and m/m2 m/m3` -- sets _m1_ to be the *intersection* of _m2_ and _m3_
+* `show` -- displays students from _m1_ in the GUI
+
+Notes:
+
+* _m1_ defaults to "default" if omitted
+
+Examples:
+
+* `mark find t/friends` -- adds all students with tag _t/friends_ under _m/default_
+* `mark m/abc find t/colleagues` -- marks all students with tag _t/colleagues_ under _m/abc_
+* `mark join m/a m/b` -- marks students in either _m/a_ or _m/b_ under _m/default_ (union of a and b)
+* `mark and m/a m/b` -- marks students in both _m/a_ and _m/b_ under _m/default_ (intersection of a and b)
+* `mark m/test show` -- shows students marked under _m/test_ in the GUI
+// end::mark[]
 
 === Deleting a student : `delete`
 
@@ -344,61 +405,6 @@ Note:
 * The command will not fail even if the supplied tag is already present in the case of `tag add` and `tag set`
 * The command will not fail even if the supplied tag is absent in the case of `tag delete`
 * The command will still display a success message if the above cases occur
-
-// tag::mark[]
-=== Mark: `mark`
-A Mark represents a group of Students in the app. Some commands accept Marks as an alternative to INDEX as a parameter to quickly perform batch operations.
-
-==== Mark Creation
-Format: `mark find t/TAGNAME` or `mark find KEYWORD`
-
-This creates a Mark containing the Students returned by the find command with the supplied arguments.
-
-E.g. `mark find t/friends` will find all students in the Address Book tagged with "friends" and add them to a Mark.
-
-==== Named Marks
-Marks can be named by using the prefix `m/MARKNAME`. If not specified, the name of the created Mark will default to "m/default".
-
-E.g. `mark m/myMarkName find t/friends` will add the Students tagged with "friends" to a Mark called "myMarkName"
-
-Note: Mark names must be alphanumeric and do not contain spaces.
-
-==== Manipulating Marks
-Marks are able to be manipulated in the same way as sets, namely, they support the following operations: `union (join)`, `intersection (and)`, `complement (NYI)`
-
-Format: `mark [m/DEST_MARK] <operation> m/OPERANDMARK1 [m/OPERANDMARK2]`
-
-E.g. `mark m/students join m/tut1 m/tut2` m/students will contain the Students of m/tut1 and m/tut2 merged together
-
-E.g. `mark m/canRetake and m/absentFromTest m/validReason` -- m/canRetake will contain Students that are in both m/absentFromTest and m/validReason
-
-Note: The first operand is compulsory while the second operand is optional and will default to "m/default"
-
-==== Displaying Marks
-The Students in a Mark can be shown in the GUI wit the following command:
-
-`mark [m/MARKTOBESHOWN] show`
-
-==== Reference
-`mark [m/m1] ...`
-
-* `find <KEYWORD|t/TAG...>` -- finds persons matching KEYWORD in their name or matching specified tags and mark under _m1_
-* `join m/m2 m/m3` -- sets _m1_ to be the *union* of _m2_ and _m3_
-* `and m/m2 m/m3` -- sets _m1_ to be the *intersection* of _m2_ and _m3_
-* `show` -- displays students from _m1_ in the GUI
-
-Notes:
-
-* _m1_ defaults to "default" if omitted
-
-Examples:
-
-* `mark find t/friends` -- adds all students with tag _t/friends_ under _m/default_
-* `mark m/abc find t/colleagues` -- marks all students with tag _t/colleagues_ under _m/abc_
-* `mark join m/a m/b` -- marks students in either _m/a_ or _m/b_ under _m/default_ (union of a and b)
-* `mark and m/a m/b` -- marks students in both _m/a_ and _m/b_ under _m/default_ (intersection of a and b)
-* `mark m/test show` -- shows students marked under _m/test_ in the GUI
-// end::mark[]
 
 === Saving the data
 
