Minor update for yogtew PPP

--- a/docs/team/yogtew.adoc
+++ b/docs/team/yogtew.adoc
@@ -74,3 +74,4 @@ include::../UserGuide.adoc[tag=attendance]
 |===
 
 include::../DeveloperGuide.adoc[tag=attendance]
+include::../DeveloperGuide.adoc[tag=attendanceusecases]
