--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -239,23 +239,27 @@ This section describes some noteworthy details on how certain features are imple
 The email feature is faciliated by Outlook Mail API, since most NUS teaching assistants have an Outlook account. This API is a RESTful API, made for server-client communication. Since the Outlook mail API is a RESTful API, this feature uses the 'POST' request (which requests that the web server accepts the data enclosed in the body of the request message) to send the email specified in the user-input to the student specified in the user-input.
 The email command itself takes a few parameters:
 
-* `Index`: Index number of student in list. Only positive numbers present in list are valid.(`i/`)
+* `Index`: Index number of student in list. Only positive numbers present in list are valid.
 * `Subject`: Subject of email to be sent, valid if not an empty string.(`s/`)
 * `Body`: Subject of email to be sent, valid if not an empty string.(`b/`)
 
-e.g `email i/2 s/Attendance poor. b/Your attendance seems to be poor. Is there a problem?`
+e.g `email 2 s/Attendance poor. b/Your attendance seems to be poor. Is there a problem?`
 
-When the user inputs the email in the CLI, the app fetches the email address of the student `index` specified and the subject and body of the email specified. This is converted to JSON, and passed as the `body` of the 'POST' request to Outlook.
+When the user inputs the email in the CLI,  the input is parsed, and the email address of the student at the `index` specified, the subject, and body of the email specified are recognized and extracted. The subject and body are converted to JSON, and passed as the `body` of the 'POST' request to Outlook, along with the access token that is also retrieved through a series of requests to the server.
 
+Retrieving access token for the request: +
+
+When the user uses the command, he/she is redirected to a browser window page of Outlook's sign in page. Once they sign in, they will be asked for their permission for the application to send mails on their behalf. Once they accept and give consent, the response sent from the server contains the authorization code.
+
+This authorization code is then extracted from the response and used to request for the access token, which is what is ultimately needed to interact with the server to send the mail itself. Using the authorization code, the access token is retrieved through a request. Once the access token is extracted from the response and available, the actual POST request to send the email is made.
+
+.App interactions with Outlook for email command
+image::Request Sequence Diagram.png[width="800"]
+ 
 The `CommandResult` object that is returned by the email command lets the user know if the email address has been successfully send to the student whose index is specified.
 
 .Component interactions for email command
-image::EmailCommand Sequence Diagram.png[width="800"]
-
-In the 'POST' request, a access token is required in order to be able to communicate to the web server, which is `Outlook` in this case. To get this access token from Outlook, a authorization code must be used, which is also provided when applicatoin is registered and authorized under Outlook. Only with this access token, can the email that is created be sent to Outlook as a 'POST' request.
-
-.App interactions with Outlook for email command
-image::UML REST API.png[width="400"]
+image::Sequence Diagram LOGIC.png[width="800"]
 
 ==== Alternative implementations:
 
